Added 2 graphs to server

--- a/web/server_es.html
+++ b/web/server_es.html
@@ -48,18 +48,31 @@
 			<div id="slides">
 				<div id="slide1">
 					<ul>
-						<li><a href="#photo1"><img src="server/images/small/persons.png" alt="Chronojump Server"></a></li>
-						<li><a href="#photo2"><img src="server/images/small/heights_by_jumps_boxplot.png" alt="Chronojump Server"></a></li>
-						<li><a href="#photo3"><img src="server/images/small/tv_by_level_sex_jumptype.png" alt="Chronojump Server"></a></li>
-						<li><a href="#photo4"><img src="server/images/small/evaluators.png" alt="Chronojump Server"></a></li>
+						<li><a href="#evaluators">Evaluadores</a></li>
+						<li><a href="#persons">Personas</a></li>
+						<li><a href="#tests">Tests</a></li>
 					</ul>
 				</div>
 			</div>
 
 			<div id="fullsize">
-				<div id="photo1">
-					<table border="0">
-						<tr><th colspan="2"><h3>Chronojump Server</h3></th></tr>
+				<div id="evaluators">
+					<table id="server" border="0">
+						<tr><th colspan="2"><h3>Chronojump Server - Evaluators stats</h3></th></tr>
+						<tr><td colspan="2" bgcolor="#6c77ab" height="1px"></td></tr>
+						<tr valign="top"><td rowspan="2">
+								<img src="server/images/small/evaluators.png" alt="Chronojump Server">
+								</td><td width="100%">
+								En este gráfico puede ver los diferentes evaluadores que han subido sus contribuciones. Cada evaluador dispone de dos barras, una para el número de saltos subidos y otra para el numero de sujetos añadidos.
+								</td></tr>
+								<tr><td valign="bottom">
+										<a href="server/images/evaluators.png"><img src="images/zoom.png" alt="Zoom image" border="0"></a>
+							</td>
+					</tr></table>
+				</div>
+				<div id="persons">
+					<table id="server" border="0">
+						<tr><th colspan="2"><h3>Chronojump Server - Persons stats</h3></th></tr>
 						<tr><td colspan="2" bgcolor="#6c77ab" height="1px"></td></tr>
 						<tr valign="top"><td rowspan="2">
 								<img src="server/images/small/persons.png" alt="Chronojump Server">
@@ -68,38 +81,68 @@
 								<ul>
 									<li>Deporte
 									<li>País
+									<li>Edad
 									<li>Género
 									<li>Nivel (de práctica)
 								</ul>
 								</td></tr>
 								<tr><td valign="bottom">
-										<a href="server/images/persons.png"><img src="images/zoom.png" alt="Ampliar imagen" border="0"></a>
+										<a href="server/images/persons.png"><img src="images/zoom.png" alt="Zoom image" border="0"></a>
 							</td>
 					</tr></table>
 				</div>
-				<div id="photo2">
-					<table border="0">
-						<tr><th colspan="2"><h3>Chronojump Server</h3></th></tr>
-						<tr><td colspan="2" bgcolor="#6c77ab" height="1px"></td></tr>
-						<tr valign="top"><td rowspan="2">
-								<img src="server/images/small/heights_by_jumps_boxplot.png" alt="Chronojump Server">
-								</td><td width="100%">
+				<div id="tests">
+					<table id="server" border="0">
+						<tr><th colspan="3"><h3>Chronojump Server - Tests stats</h3></th></tr>
+						<tr><td colspan="3" bgcolor="#6c77ab" height="1px"></td></tr>
+						<tr>
+							<td><a href="#tests"><img src="server/images/small/tf_by_jumps_boxplot.png" width="60" height="60"></a></td>
+							<td><a href="#tests2"><img src="server/images/small/tf_by_extra_weight.png" width="60" height="60"></a></td>
+							<td><a href="#tests3"><img src="server/images/small/tf_by_level_sex_jumptype.png" width="60" height="60"></a></td>
+						</tr>
+						<tr valign="top"><td colspan="2" rowspan="2">
+								<img src="server/images/small/tf_by_jumps_boxplot.png" width="140" height="140">
+						</td><td width="100%">
 								En esta imagen puede ver un gráfico para hombres y otro para mujeres. Cada gráfico muestra cajas de saltos simples (con sólo un tiempo de vuelo) que han sido subidos al servidor.
 								<br><br>Cada caja muestra los cuartiles y los valores extraños (si los hay).
 								<br>También se muestra la <i>n</i>.
 								</td></tr>
 								<tr><td valign="bottom">
-										<a href="server/images/heights_by_jumps_boxplot.png"><img src="images/zoom.png" alt="Ampliar imagen" border="0"></a>
+										<a href="server/images/tf_by_jumps_boxplot.png"><img src="images/zoom.png" alt="Zoom image" border="0"></a>
 							</td>
 					</tr></table>
 				</div>
-				<div id="photo3">
-					<table border="0">
-						<tr><th colspan="2"><h3>Chronojump Server</h3></th></tr>
-						<tr><td colspan="2" bgcolor="#6c77ab" height="1px"></td></tr>
-						<tr valign="top"><td rowspan="2">
-								<img src="server/images/small/tv_by_level_sex_jumptype.png" alt="Chronojump Server">
-								</td><td width="100%">
+				<div id="tests2">
+					<table id="server" border="0">
+						<tr><th colspan="3"><h3>Chronojump Server - Tests stats</h3></th></tr>
+						<tr><td colspan="3" bgcolor="#6c77ab" height="1px"></td></tr>
+						<tr>
+							<td><a href="#tests"><img src="server/images/small/tf_by_jumps_boxplot.png" width="60" height="60"></a></td>
+							<td><a href="#tests2"><img src="server/images/small/tf_by_extra_weight.png" width="60" height="60"></a></td>
+							<td><a href="#tests3"><img src="server/images/small/tf_by_level_sex_jumptype.png" width="60" height="60"></a></td>
+						</tr>
+						<tr valign="top"><td colspan="2" rowspan="2">
+								<img src="server/images/small/tf_by_extra_weight.png" width="140" height="140">
+						</td><td width="100%">
+								Esta imagen muestra la correlación entre tiempo de vuelo y peso extra.
+								</td></tr>
+								<tr><td valign="bottom">
+										<a href="server/images/tf_by_extra_weight.png"><img src="images/zoom.png" alt="Zoom image" border="0"></a>
+							</td>
+					</tr></table>
+				</div>
+				<div id="tests3">
+					<table id="server" border="0">
+						<tr><th colspan="3"><h3>Chronojump Server - Tests stats</h3></th></tr>
+						<tr><td colspan="3" bgcolor="#6c77ab" height="1px"></td></tr>
+						<tr>
+							<td><a href="#tests"><img src="server/images/small/tf_by_jumps_boxplot.png" width="60" height="60"></a></td>
+							<td><a href="#tests2"><img src="server/images/small/tf_by_extra_weight.png" width="60" height="60"></a></td>
+							<td><a href="#tests3"><img src="server/images/small/tf_by_level_sex_jumptype.png" width="60" height="60"></a></td>
+						</tr>
+						<tr valign="top"><td colspan="2" rowspan="2">
+								<img src="server/images/small/tf_by_level_sex_jumptype.png" width="140" height="140">
+						</td><td width="100%">
 								Este es un gráfico de cuatro variables:
 								<ul>
 									<li>Altura del salto
@@ -109,30 +152,57 @@
 								</ul>
 								</td></tr>
 								<tr><td valign="bottom">
-										<a href="server/images/tv_by_level_sex_jumptype.png"><img src="images/zoom.png" alt="Ampliar imagen" border="0"></a>
+										<a href="server/images/tf_by_level_sex_jumptype.png"><img src="images/zoom.png" alt="Zoom image" border="0"></a>
 							</td>
 					</tr></table>
 				</div>
-				<div id="photo4">
-					<table border="0">
-						<tr><th colspan="2"><h3>Chronojump Server</h3></th></tr>
+				<div id="reliability">
+					<table id="all_vert_space">
+						<tr><th colspan="2"><h3>Fiabilidad en el servidor. Dos niveles:</h3></th></tr>
 						<tr><td colspan="2" bgcolor="#6c77ab" height="1px"></td></tr>
-						<tr valign="top"><td rowspan="2">
-								<img src="server/images/small/evaluators.png" alt="Chronojump Server">
-								</td><td width="100%">
-								En este gráfico puede ver los diferentes evaluadores que han subido sus contribuciones. Cada evaluador dispone de dos barras, una para el número de saltos subidos y otra para el numero de sujetos añadidos.
+
+						<tr valign="top"><td colspan="2">
+<b>1)<span style="background-color: yellow">Datos generales</b></span> Los <i>sube</i> cualquiera que disponga de la tecnología.
+<br><b>2)<span style="background-color: #ccff00">Datos fiables</b></span> Acreditados por el grupo de investigación SAFE (Universitat Ramon Llull).
 								</td></tr>
-								<tr><td valign="bottom">
-										<a href="server/images/evaluators.png"><img src="images/zoom.png" alt="Ampliar imagen" border="0"></a>
-							</td>
+<tr valign="top"><td width="50%">
+<span style="background-color: #ccff00"><b>Datos fiables</b></span>. Perfil <b>Evaluador-entrenador</b>
+<ul id="nospace">
+  <li>Titulación de entrenador nacional.
+  <li>Trabajo actual: club, institución, categoría.
+  <li>Años de entrenador en élite.
+  <li>Historial de entrenador: deportes y modalidades.
+  <li>Experiencia en utilización de instrumentos de medida.
+  <li>Trayectoria profesional (100 palabras).
+</ul>
+</td><td>
+<span style="background-color: #ccff00"><b>Datos fiables</b></span>. Perfil <b>Evaluador-investigador</b>
+<ul id="nospace">
+  <li>Titulación conseguida. ¿Es profesor universitario?
+  <li>Investigaciones en ciencias del deporte usando la medida.
+  <li>Otras investigaciones. Años de investigador.
+  <li>Grupos de investigación universitarios.
+  <li>Becas obtenidas.
+  <li>Trayectoria profesional (100 palabras).
+</ul>
+								</td></tr>
+						<tr valign="top"><td colspan="2">
+<span style="background-color: #ccff00"><b>Datos fiables</b></span>. Criterios <b>por sesión</b>: 
+Consentimiento informado -
+Calentamiento -
+Variaciones del protocolo (si las hay) -
+Protocolos de nuevos tests y validaciones (si los hay) -
+Los datos han sido publicados? Dónde? -
+Justificación de la investigación (100 palabras).
+								</td></tr>
 					</tr></table>
 				</div>
 			</div>
 			<div id="note">
 				<font size="2">
 					<br>Chronojump dispone de un servidor para compartir datos entre usuarios.
-					<br>El servidor ya ha comenzado a recoger y mostrar datos gracias a las aportaciones de los usuarios.
-					<br>Si hay nuevos datos, los gráficos se actualizan por la noche.
+					<br>El servidor recoger y muestra datos aportados por los usuarios.
+					<br><br><a href="server_es.html#reliability">Fiabilidad en el servidor</a>.
 				</font>
 			</div>
 		</div>
