--- a/web/server.html
+++ b/web/server.html
@@ -48,74 +48,17 @@
 			<div id="slides">
 				<div id="slide1">
 					<ul>
-						<li><a href="#photo1"><img src="server/images/small/persons.png" alt="Chronojump Server"></a></li>
-						<li><a href="#photo2"><img src="server/images/small/heights_by_jumps_boxplot.png" alt="Chronojump Server"></a></li>
-						<li><a href="#photo3"><img src="server/images/small/tv_by_level_sex_jumptype.png" alt="Chronojump Server"></a></li>
-						<li><a href="#photo4"><img src="server/images/small/evaluators.png" alt="Chronojump Server"></a></li>
+						<li><a href="#evaluators">Evaluators</a></li>
+						<li><a href="#persons">Persons</a></li>
+						<li><a href="#tests">Tests</a></li>
 					</ul>
 				</div>
 			</div>
 
 			<div id="fullsize">
-				<div id="photo1">
-					<table border="0">
-						<tr><th colspan="2"><h3>Chronojump Server</h3></th></tr>
-						<tr><td colspan="2" bgcolor="#6c77ab" height="1px"></td></tr>
-						<tr valign="top"><td rowspan="2">
-								<img src="server/images/small/persons.png" alt="Chronojump Server">
-								</td><td width="100%">
-								Here you can see a graph of the persons (atheltes) that are in server. This graph shows:
-								<ul>
-									<li>Sport
-									<li>Country
-									<li>Sex
-									<li>Level (of practice)
-								</ul>
-								</td></tr>
-								<tr><td valign="bottom">
-										<a href="server/images/persons.png"><img src="images/zoom.png" alt="Zoom image" border="0"></a>
-							</td>
-					</tr></table>
-				</div>
-				<div id="photo2">
-					<table border="0">
-						<tr><th colspan="2"><h3>Chronojump Server</h3></th></tr>
-						<tr><td colspan="2" bgcolor="#6c77ab" height="1px"></td></tr>
-						<tr valign="top"><td rowspan="2">
-								<img src="server/images/small/heights_by_jumps_boxplot.png" alt="Chronojump Server">
-								</td><td width="100%">
-								This image shows a graph for males and another for females. Each graph plots boxplots of different simple jumps (only on flight time) that are on server.
-								<br><br>Each boxplot shows quantiles and rare values (if any).
-								<br>Also <i>n</i> value is shown.
-								</td></tr>
-								<tr><td valign="bottom">
-										<a href="server/images/heights_by_jumps_boxplot.png"><img src="images/zoom.png" alt="Zoom image" border="0"></a>
-							</td>
-					</tr></table>
-				</div>
-				<div id="photo3">
-					<table border="0">
-						<tr><th colspan="2"><h3>Chronojump Server</h3></th></tr>
-						<tr><td colspan="2" bgcolor="#6c77ab" height="1px"></td></tr>
-						<tr valign="top"><td rowspan="2">
-								<img src="server/images/small/tv_by_level_sex_jumptype.png" alt="Chronojump Server">
-								</td><td width="100%">
-								This is a four variable graph:
-								<ul>
-									<li>Height of jump
-									<li>Practice level
-									<li>Jump type
-									<li>Sex
-								</ul>
-								</td></tr>
-								<tr><td valign="bottom">
-										<a href="server/images/tv_by_level_sex_jumptype.png"><img src="images/zoom.png" alt="Zoom image" border="0"></a>
-							</td>
-					</tr></table>
-				</div>
-				<div id="photo4">
-					<table border="0">
-						<tr><th colspan="2"><h3>Chronojump Server</h3></th></tr>
+				<div id="evaluators">
+					<table id="server" border="0">
+						<tr><th colspan="2"><h3>Chronojump Server - Evaluators stats</h3></th></tr>
 						<tr><td colspan="2" bgcolor="#6c77ab" height="1px"></td></tr>
 						<tr valign="top"><td rowspan="2">
 								<img src="server/images/small/evaluators.png" alt="Chronojump Server">
@@ -127,12 +70,140 @@
 							</td>
 					</tr></table>
 				</div>
+				<div id="persons">
+					<table id="server" border="0">
+						<tr><th colspan="2"><h3>Chronojump Server - Persons stats</h3></th></tr>
+						<tr><td colspan="2" bgcolor="#6c77ab" height="1px"></td></tr>
+						<tr valign="top"><td rowspan="2">
+								<img src="server/images/small/persons.png" alt="Chronojump Server">
+								</td><td width="100%">
+								Here you can see a graph of the persons (atheltes) that are in server. This graph shows:
+								<ul>
+									<li>Sport
+									<li>Country
+									<li>Age
+									<li>Gender
+									<li>Level (of practice)
+								</ul>
+								</td></tr>
+								<tr><td valign="bottom">
+										<a href="server/images/persons.png"><img src="images/zoom.png" alt="Zoom image" border="0"></a>
+							</td>
+					</tr></table>
+				</div>
+				<div id="tests">
+					<table id="server" border="0">
+						<tr><th colspan="3"><h3>Chronojump Server - Tests stats</h3></th></tr>
+						<tr><td colspan="3" bgcolor="#6c77ab" height="1px"></td></tr>
+						<tr>
+							<td><a href="#tests"><img src="server/images/small/tf_by_jumps_boxplot.png" width="60" height="60"></a></td>
+							<td><a href="#tests2"><img src="server/images/small/tf_by_extra_weight.png" width="60" height="60"></a></td>
+							<td><a href="#tests3"><img src="server/images/small/tf_by_level_sex_jumptype.png" width="60" height="60"></a></td>
+						</tr>
+						<tr valign="top"><td colspan="2" rowspan="2">
+								<img src="server/images/small/tf_by_jumps_boxplot.png" width="140" height="140">
+						</td><td width="100%">
+								This image shows a graph for males and another for females. Each graph plots boxplots of different simple jumps (only on flight time) that are on server.
+								<br><br>Each boxplot shows quantiles and rare values (if any).
+								<br>Also <i>n</i> value is shown.
+								</td></tr>
+								<tr><td valign="bottom">
+										<a href="server/images/tf_by_jumps_boxplot.png"><img src="images/zoom.png" alt="Zoom image" border="0"></a>
+							</td>
+					</tr></table>
+				</div>
+				<div id="tests2">
+					<table id="server" border="0">
+						<tr><th colspan="3"><h3>Chronojump Server - Tests stats</h3></th></tr>
+						<tr><td colspan="3" bgcolor="#6c77ab" height="1px"></td></tr>
+						<tr>
+							<td><a href="#tests"><img src="server/images/small/tf_by_jumps_boxplot.png" width="60" height="60"></a></td>
+							<td><a href="#tests2"><img src="server/images/small/tf_by_extra_weight.png" width="60" height="60"></a></td>
+							<td><a href="#tests3"><img src="server/images/small/tf_by_level_sex_jumptype.png" width="60" height="60"></a></td>
+						</tr>
+						<tr valign="top"><td colspan="2" rowspan="2">
+								<img src="server/images/small/tf_by_extra_weight.png" width="140" height="140">
+						</td><td width="100%">
+								This image shows correlation between jumps flight time and extra weight.
+								</td></tr>
+								<tr><td valign="bottom">
+										<a href="server/images/tf_by_extra_weight.png"><img src="images/zoom.png" alt="Zoom image" border="0"></a>
+							</td>
+					</tr></table>
+				</div>
+				<div id="tests3">
+					<table id="server" border="0">
+						<tr><th colspan="3"><h3>Chronojump Server - Tests stats</h3></th></tr>
+						<tr><td colspan="3" bgcolor="#6c77ab" height="1px"></td></tr>
+						<tr>
+							<td><a href="#tests"><img src="server/images/small/tf_by_jumps_boxplot.png" width="60" height="60"></a></td>
+							<td><a href="#tests2"><img src="server/images/small/tf_by_extra_weight.png" width="60" height="60"></a></td>
+							<td><a href="#tests3"><img src="server/images/small/tf_by_level_sex_jumptype.png" width="60" height="60"></a></td>
+						</tr>
+						<tr valign="top"><td colspan="2" rowspan="2">
+								<img src="server/images/small/tf_by_level_sex_jumptype.png" width="140" height="140">
+						</td><td width="100%">
+								This is a four variable graph:
+								<ul>
+									<li>Height of jump
+									<li>Practice level
+									<li>Jump type
+									<li>Sex
+								</ul>
+								</td></tr>
+								<tr><td valign="bottom">
+										<a href="server/images/tf_by_level_sex_jumptype.png"><img src="images/zoom.png" alt="Zoom image" border="0"></a>
+							</td>
+					</tr></table>
+				</div>
+				<div id="reliability">
+					<table id="all_vert_space">
+						<tr><th colspan="2"><h3>Reliability on the server. Two levels:</h3></th></tr>
+						<tr><td colspan="2" bgcolor="#6c77ab" height="1px"></td></tr>
+
+						<tr valign="top"><td colspan="2">
+<b>1)<span style="background-color: yellow">General data</b></span> Uploaded by anyone with the technology.
+<br><b>2)<span style="background-color: #ccff00">Reliable data</b></span> Accredited by SAFE research group (Universitat Ramon Llull).
+								</td></tr>
+<tr valign="top"><td width="50%">
+<span style="background-color: #ccff00"><b>Reliable data</b></span>. Profile <b>Evaluator-trainer</b>
+<ul id="nospace">
+  <li>National trainer.
+  <li>Current work: club, institution, category.
+  <li>Years as elite trainer.
+  <li>Historical on trained sports and specialties.
+  <li>Experience on using measurement equipment.
+  <li>Career (100 words)
+</ul>
+</td><td>
+<span style="background-color: #ccff00"><b>Reliable data</b></span>. Profile <b>Evaluator-researcher</b>
+<ul id="nospace">
+  <li>Maximum reached degree.
+  <li>Teacher at University?
+  <li>Sport science researches using measure.
+  <li>Other researches. Years as researcher.
+  <li>University research groups.
+  <li>Received grants.
+  <li>Career (100 words)
+</ul>
+								</td></tr>
+						<tr valign="top"><td colspan="2">
+<span style="background-color: #ccff00"><b>Reliable data</b></span>. Criteria <b>by session</b>: 
+Informed consent -
+Warming up -
+Protocol variations (if any) -
+New tests protocols and validations (if any) -
+Data has been published? Where? -
+Justification of the research (100 words).
+								</td></tr>
+					</tr></table>
+				</div>
 			</div>
 			<div id="note">
 				<font size="2">
 					<br>Chronojump has a server in order to share data between users.
 					<br>Server started to collect and show data (thanks to users contribution).
-					<br>All the graphs are updated nightly if there's new data.
+					<br><br><a href="server.html#reliability">Realiability on the server</a>.
 				</font>
 			</div>
 		</div>
