website: added Exequiel contact platform video

--- a/web/construction_modular_circuit_platform.html
+++ b/web/construction_modular_circuit_platform.html
@@ -148,8 +148,9 @@ We bought them at Diotronic store on Barcelona. The reference of the boards was:
 
 	<li>Now there's only a need: buy a plastic cover that can be folded, and optionally add a velcro with a double sided tape.
 </ol>
+																						<b>Update: (2012-Feb-8)</b> Exequiel Mondaca has uploaded a video (in spanish) showing the <a href="http://www.youtube.com/watch?v=LzvgrqYj45g&context=C3d725ccADOEgsToPDskKPJ3WFzs1lznI--hh12MNm">creation of the modular contact platform</a> using instructions on this page.
 
-			<br><hr color="#d1dce1" width="80%">
+<br><br><hr color="#d1dce1" width="80%">
 You can discuss about this information on the forum: <a href="http://forum.chronojump.org/showthread.php?tid=13">New modular platform. Instruction to build it (Chronojump forum)</a>.
 
 <p>
