--- a/web/construction_modular_circuit_platform_es.html
+++ b/web/construction_modular_circuit_platform_es.html
@@ -149,7 +149,9 @@ Se puede acoplar tantos pares de placas como se desee y en cualquier forma bidim
 																							<li>S&oacute;lo queda comprar una funda de pl&aacute;stico plegable y opcionalmente a&ntilde;adirle un velcro con cinta de doble cara.
 																						</ol>
 
-																						<br><hr color="#d1dce1" width="80%">
+																						<b>Actualización: (8-feb-2012)</b> Exequiel Mondaca ha colgado un vídeo sobre la <a href="http://www.youtube.com/watch?v=LzvgrqYj45g&context=C3d725ccADOEgsToPDskKPJ3WFzs1lznI--hh12MNm">elaboración de su plataforma de contactos modular</a> a partir de las instrucciones en esta página.
+
+																						<br><br><hr color="#d1dce1" width="80%">
 																						Discuta esta informaci&oacute;n en el foro: <a href="http://foro.chronojump.org/showthread.php?tid=11">Nueva plataforma modular. Instrucciones para la construcci&oacute;n (foro de Chronojump)</a>.
 
 																						<p>
