--- a/web/documents.html
+++ b/web/documents.html
@@ -86,7 +86,7 @@
 						<tr valign="top">
 							<td id="presentation" width="40%">
 								<ul id="space">
-									<li>Chronojump Project</li>
+									<li><b>Chronojump Project</b></li>
 								</ul>
 								<br><br>
 							</td>
@@ -120,8 +120,8 @@
 						<tr valign="top">
 							<td id="documents">
 								<ul id="space">
+									<li><b>Chronojump Manual</b></li>
 									<li>Chronojump Wikipedia</li>
-									<li>Chronojump Manual</li>
 								</ul>
 								<ul id="nospace">
 									<li>Software FAQ</li>
@@ -133,8 +133,8 @@
 							</td>
 							<td>
 								<ul id="lang">
+									<li id="lang"><a href="docs/chronojump_manual_en.pdf">en</a>, <a href="docs/chronojump_manual_es.pdf">es</a></li>
 									<li id="lang"><a href="http://es.wikipedia.org/wiki/Chronojump_Boscosystem">es</a></li>
-									<li id="lang"><a href="docs/chronojump_manual_es.pdf">es</a></li>
 									<li id="lang"><a href="faq_software.html">en</a>, <a href="faq_software_es.html">es</a></li>
 									<li id="lang"><a href="posters.html#06-08">en</a></li>
 									<li id="lang"><a href="software_more.html">en</a>, <a href="software_more_es.html">es</a></li>
@@ -158,7 +158,7 @@
 														<ul id="nospace">
 																		<li>Connect Photocells to Chronopic</li>
 																		<li>Build your contact platform:
-																		<br>&nbsp;&nbsp;&nbsp;Modular printed circuit (recommended)
+																		<br>&nbsp;&nbsp;&nbsp;Modular printed circuit (recommended) (+video)
 																		<br>&nbsp;&nbsp;&nbsp;Steel rods</li>
 																		<li>Construction of a push button</li>
 																		<li>Chronopic build</li>
@@ -191,9 +191,9 @@
 							<td>
 											<ul id="lang">
 															<li id="lang">&nbsp;</li>
-															<li id="lang"><a href="http://www.vimeo.com/1205809 (Flash video)" title="B. Buscà, X. Peña, 2008">ca</a></li>
+															<li id="lang"><a href="http://www.vimeo.com/1205809" title="B. Buscà, X. Peña, 2008 (Flash video)">ca</a></li>
 															<li id="lang">&nbsp;</li>
-															<li id="lang"><a href="http://omploader.org/vMXo1MA (OpenVideo, use Firefox 3.5 or other free browsers)" title="J.M. Padullés, 2009">ca</a></li>
+															<li id="lang"><a href="http://omploader.org/vMXo1MA" title="J.M. Padullés, 2009 (OpenVideo, usad Firefox 3.5 u otros navegadores libres)">ca</a></li>
 											</ul>
 							</td>
 						</tr>
