--- a/web/documents_es.html
+++ b/web/documents_es.html
@@ -44,11 +44,11 @@
 						<center>
 							<table border ="0" width = "410" height="81" cellpadding="0" cellspacing="0">
 								<tr valign="bottom" align="center">
-									<td width="20%"><a href="software.html"><img src="images/nuvola-media-optical.png" alt="Software" border="0"></a></td>
-									<td width="20%"><a href="hardware_store.html"><img src="images/nuvola-emblem-package.png" alt="Hardware store" border="0"></a></td>
+									<td width="20%"><a href="software_es.html"><img src="images/nuvola-media-optical.png" alt="Software" border="0"></a></td>
+									<td width="20%"><a href="hardware_store_es.html"><img src="images/nuvola-emblem-package.png" alt="Hardware store" border="0"></a></td>
 									<td width="20%" bgcolor="#6c77ab"><img src="images/nuvola-folder.png" alt="Documents" border="0"></td>
-									<td width="20%"><a href="http://forum.chronojump.org"><img src="images/nuvola-gaim_send-im.png" alt="Forum" border="0"></a></td>
-									<td width="20%"><a href="server.html"><img src="images/nuvola-applications-internet.png" alt="Server" border="0"></a></td>
+									<td width="20%"><a href="http://foro.chronojump.org"><img src="images/nuvola-gaim_send-im.png" alt="Foro" border="0"></a></td>
+									<td width="20%"><a href="server_es.html"><img src="images/nuvola-applications-internet.png" alt="Server" border="0"></a></td>
 								</tr>
 								<tr valign="top" align="center">
 									<td><font size="2">Software</font></td>
@@ -86,7 +86,7 @@
 						<tr valign="top">
 							<td id="presentation" width="40%">
 								<ul id="space">
-												<li>Proyecto Chronojump</li>
+												<li><b>Proyecto Chronojump</b></li>
 								</ul>
 								<br><br>
 							</td>
@@ -120,8 +120,8 @@
 						<tr valign="top">
 							<td id="documents">
 											<ul id="space">
+															<li><b>Chronojump Manual</b></li>
 															<li>Chronojump Wikipedia</li>
-															<li>Chronojump Manual</li>
 											</ul>
 											<ul id="nospace">
 															<li>Software FAQ</li>
@@ -133,8 +133,8 @@
 							</td>
 							<td>
 											<ul id="lang">
+															<li id="lang"><a href="docs/chronojump_manual_en.pdf">en</a>, <a href="docs/chronojump_manual_es.pdf">es</a></li>
 															<li id="lang"><a href="http://es.wikipedia.org/wiki/Chronojump_Boscosystem">es</a></li>
-															<li id="lang"><a href="docs/chronojump_manual_es.pdf">es</a></li>
 															<li id="lang"><a href="faq_software.html">en</a>, <a href="faq_software_es.html">es</a></li>
 															<li id="lang"><a href="posters.html#06-08">en</a></li>
 															<li id="lang"><a href="software_more.html">en</a>, <a href="software_more_es.html">es</a></li>
@@ -158,7 +158,7 @@
 														<ul id="nospace">
 																		<li>Conectar fotocélulas a Chronopic</li>
 																		<li>Construcción de plataforma de contactos:
-																		<br>&nbsp;&nbsp;&nbsp;Modular de circuito impreso (recomendada)
+																		<br>&nbsp;&nbsp;&nbsp;Modular de circuito impreso (recomendada)<br>&nbsp;&nbsp;&nbsp;(+vídeo)
 																		<br>&nbsp;&nbsp;&nbsp;Varillas de acero</li>
 																		<li>Construcción de pulsador</li>
 																		<li>Construcción de Chronopic</li>
@@ -172,7 +172,7 @@
 															<li id="lang"><a href="posters.html#seattle_09">en</a></li>
 															<li id="lang"><a href="photocells_velleman.html">en</a>, <a href="photocells_velleman_es.html">es</a></li>
 															<li id="lang">&nbsp;</li>
-															<li id="lang"><a href="construction_modular_circuit_platform.html">en</a>, <a href="construction_modular_circuit_platform_es.html">es</a></li>
+															<li id="lang"><a href="construction_modular_circuit_platform.html">en</a>, <a href="construction_modular_circuit_platform_es.html">es</a></li><br>
 															<li id="lang"><a href="construction_contact_platform.html">en</a>, <a href="construction_contact_platform_es.html">es</a></li>
 															<li id="lang"><a href="construction_push_button.html">en</a>, <a href="construction_push_button_es.html">es</a></li>
 															<li id="lang"><a href="chronopic_build.html">en</a>, <a href="chronopic_build_es.html">es</a></li>
@@ -191,9 +191,9 @@
 							<td>
 											<ul id="lang">
 															<li id="lang">&nbsp;</li>
-															<li id="lang"><a href="http://www.vimeo.com/1205809 (Flash video)" title="B. Buscà, X. Peña, 2008">ca</a></li>
+															<li id="lang"><a href="http://www.vimeo.com/1205809" title="B. Buscà, X. Peña, 2008 (Flash video)">ca</a></li>
 															<li id="lang">&nbsp;</li>
-															<li id="lang"><a href="http://omploader.org/vMXo1MA (OpenVideo, usad Firefox 3.5 u otros navegadores libres)" title="J.M. Padullés, 2009">ca</a></li>
+															<li id="lang"><a href="http://omploader.org/vMXo1MA" title="J.M. Padullés, 2009 (OpenVideo, usad Firefox 3.5 u otros navegadores libres)">ca</a></li>
 											</ul>
 							</td>
 						</tr>
