Encoder sounds are same than chronojump

--- a/web/hardware_store.html
+++ b/web/hardware_store.html
@@ -51,8 +51,8 @@
 					<ul>
 						<li><a href="#chronopic3"><img src="images/chronopic3.png" alt="Chronopic3"></a></li>
 						<li><a href="#platform-rigid"><img src="images/chronojump_circuit_board_platform_small.png" alt="Platform rigid"></a></li>
-						<li><a href="#platform-flexible"><img src="images/chronojump_flexible_platform_small.jpg" alt="Platform flexible"></a></li>
 						<li><a href="#photocells"><img src="images/velleman_connecting5.jpg" alt="Photocells"></a></li>
+						<li><a href="#encoder"><img src="images/encoder-chronojump-sized.png" alt="Linear encoder"></a></li>
 					</ul>
 				</div>
 			</div>
@@ -69,6 +69,7 @@
 								<ul>
 									<li><b>50ms</b>: suitable for jumping on platforms (helps to avoid bogus jumps when jump technique is inadequate)
 									<li><b>10ms</b>: suitable for running between photocells
+								</ul>
 								
 								You can <a href="http://forum.chronojump.org/showthread.php?tid=20">change the firmware</a> anytime.
 								</td></tr>
@@ -95,22 +96,6 @@
 								</td></tr>
 					</table>
 				</div>
-				<div id="platform-flexible">
-					<table>
-						<tr><th colspan="2"><h3>Flexible jump platform</h3></th></tr>
-						<tr><td colspan="2" bgcolor="#6c77ab" height="1px"></td></tr>
-						<tr valign="top"><td>
-								<img src="images/chronojump_flexible_platform_small.jpg" alt="Chronojump flexible platform">
-								</td><td width="100%">
-									Flexible platform with high contact area. Best balance between price, quality, transport and storage.
-								<br><br>Sizes:
-								<ul>
-									<li>Din A1: 60€
-									<li>Din A2: 45€
-								</ul>
-								</td></tr>
-					</tr></table>
-				</div>
 				<div id="photocells">
 					<table>
 						<tr><th colspan="2"><h3>Photocells</h3></th></tr>
@@ -128,6 +113,19 @@
 								</td></tr>
 								<tr><td valign="bottom">
 								Price: 1 Photocell includes emitter and receptor, and costs 69€.
+							</td>
+					</tr></table>
+				</div>
+				<div id="encoder">
+					<table>
+						<tr><th colspan="2"><h3>Linear encoder</h3></th></tr>
+						<tr><td colspan="2" bgcolor="#6c77ab" height="1px"></td></tr>
+						<tr valign="top"><td rowspan="2">
+								<img src="images/encoder-chronojump-sized.png" alt="Linear encoder">
+								</td><td width="100%">
+								Soon available.
+								</td></tr>
+								<tr><td valign="bottom">
 							</td>
 					</tr></table>
 				</div>
@@ -162,10 +160,9 @@
 								Cable using on three different scenarios.
 								<br>
 								<ul id="nospace">
-									<li><span style="background-color: #6c76ab"><font color="#f7ff19"><b>Yellow</b>:</font></span> USB cable. This cable is standard USB Bidirectional <a href="http://chronojump.org/images/USB_types_2.jpg">male&nbsp;A-male&nbsp;B</a>. Price:&nbsp;1€.
+									<li><span style="background-color: #6c76ab"><font color="#f7ff19"><b>Yellow</b>:</font></span> USB cable. This cable is standard USB Bidirectional <a href="http://chronojump.org/images/USB_types_2.jpg">male&nbsp;A-male&nbsp;B</a>. Price:&nbsp;2€.
 									<li><font color="#191cff"><b>Blue</b></font>: cables and RCA adapter. RCA adapter converts two cables in one:
-									<br><font color="#191cff"><b>am</b></font>: <b>a</b>dapter <b>m</b>ale, it connects to Chronopic.
-									<br><font color="#191cff"><b>af</b></font>: <b>a</b>dapter <b>f</b>emale, it connects to a cable.
+									<br><font color="#191cff"><b>a</b></font>: adapter.
 									<br>Prices: RCA Cable 2.5m:&nbsp;3€; 5m:&nbsp;4€; 10m:&nbsp;8€; 25m:&nbsp;16€; 50m:&nbsp;30€. RCA-Adapter:&nbsp;2€.
 								</ul>
 								</td></tr>
