--- a/web/hardware_store_es.html
+++ b/web/hardware_store_es.html
@@ -51,8 +51,8 @@
 					<ul>
 						<li><a href="#chronopic3"><img src="images/chronopic3.png" alt="Chronopic3"></a></li>
 						<li><a href="#platform-rigid"><img src="images/chronojump_circuit_board_platform_small.png" alt="Platform rigid"></a></li>
-						<li><a href="#platform-flexible"><img src="images/chronojump_flexible_platform_small.jpg" alt="Platform flexible"></a></li>
 						<li><a href="#photocells"><img src="images/velleman_connecting5.jpg" alt="Photocells"></a></li>
+						<li><a href="#encoder"><img src="images/encoder-chronojump-sized.png" alt="Linear encoder"></a></li>
 					</ul>
 				</div>
 			</div>
@@ -70,7 +70,6 @@
 									<li><b>50ms</b>: ideal para saltos en plataformas (ayuda a prevenir falsos saltos en caso de errores en la técnica)
 									<li><b>10ms</b>: ideal para carreras con células fotoeléctricas
 								</ul>
-							</div>
 							<br>Cuando lo desee <a href="http://foro.chronojump.org/showthread.php?tid=19">puede cambiar de firmware</a>.
 								</td></tr>
 								<tr><td valign="bottom">
@@ -96,23 +95,6 @@
 								</td></tr>
 					</table>
 				</div>
-				<div id="platform-flexible">
-					<table>
-						<tr><th colspan="2"><h3>Platforma de saltos flexible</h3></th></tr>
-						<tr><td colspan="2" bgcolor="#6c77ab" height="1px"></td></tr>
-						<tr valign="top"><td rowspan="2">
-								<img src="images/chronojump_flexible_platform_small.jpg" alt="Chronojump flexible platform">
-								</td><td width="100%">
-									Plataforma flexible con elevada superfície de contacto. Muy buena relación entre precio, calidad, capacidad de transporte y almacenamiento.
-								<br><br>Tamaños:
-								<ul>
-									<li>Din A1: 60€
-									<li>Din A2: 45€
-								</ul>
-								</td></tr>
-							</td>
-					</tr></table>
-				</div>
 				<div id="photocells">
 					<table>
 						<tr><th colspan="2"><h3>Fotocélulas</h3></th></tr>
@@ -130,6 +112,19 @@
 								</td></tr>
 								<tr><td valign="bottom">
 								Precio: 1 fotocélula incluye emisor y receptor, y su coste es 69€.
+							</td>
+					</tr></table>
+				</div>
+				<div id="encoder">
+					<table>
+						<tr><th colspan="2"><h3>Encoder lineal</h3></th></tr>
+						<tr><td colspan="2" bgcolor="#6c77ab" height="1px"></td></tr>
+						<tr valign="top"><td rowspan="2">
+								<img src="images/encoder-chronojump-sized.png" alt="Linear encoder">
+								</td><td width="100%">
+								En breve a a la venta.
+								</td></tr>
+								<tr><td valign="bottom">
 							</td>
 					</tr></table>
 				</div>
@@ -164,10 +159,9 @@
 								Uso de los cables en tres situaciones distintas.
 								<br>
 								<ul id="nospace">
-									<li><span style="background-color: #6c76ab"><font color="#f7ff19"><b>Amarillo</b></font></span> cable USB. Es un cable USB Bidireccional estándard <a href="http://chronojump.org/images/USB_types_2.jpg">macho&nbsp;A-macho&nbsp;B</a>. Precio:&nbsp;1€.
+									<li><span style="background-color: #6c76ab"><font color="#f7ff19"><b>Amarillo</b></font></span> cable USB. Es un cable USB Bidireccional estándard <a href="http://chronojump.org/images/USB_types_2.jpg">macho&nbsp;A-macho&nbsp;B</a>. Precio:&nbsp;2€.
 									<li><font color="#191cff"><b>Azul</b></font> cables y adaptador RCA. El adaptador RCA convierte dos cables en uno:
-									<br><font color="#191cff"><b>am</b></font>: <b>a</b>daptador <b>m</b>acho, se conecta al Chronopic.
-									<br><font color="#191cff"><b>af</b></font>: <b>a</b>daptador (<b>f</b>emale), se conecta a un cable.
+									<br><font color="#191cff"><b>a</b></font>: adaptador.
 									<br>Precios: Cables RCA 2,5m:&nbsp;3€; 5m:&nbsp;4€; 10m:&nbsp;8€; 25m:&nbsp;16€; 50m:&nbsp;30€. Adaptador-RCA:&nbsp;2€.
 								</ul>
 								</td></tr>
