Encoder recalculate search if data file is found

--- a/web/hardware_store_es.html
+++ b/web/hardware_store_es.html
@@ -122,7 +122,7 @@
 						<tr valign="top"><td rowspan="2">
 								<img src="images/encoder-chronojump-sized.png" alt="Linear encoder">
 								</td><td width="100%">
-								En breve a a la venta.
+								En breve a la venta.
 								</td></tr>
 								<tr><td valign="bottom">
 							</td>
