Encoder on website

--- a/web/hardware_store.html
+++ b/web/hardware_store.html
@@ -124,6 +124,8 @@
 								<img src="images/encoder-chronojump-sized.png" alt="Linear encoder">
 								</td><td width="100%">
 								Soon available.
+								<br><br><a href="http://chronojump.org/encoder-chronojump-project.png">Check development status.</a>
+								<br><br><a href="http://forum.chronojump.org/showthread.php?tid=220">Discuss about it.</a>
 								</td></tr>
 								<tr><td valign="bottom">
 							</td>
