--- a/web/hardware_store_es.html
+++ b/web/hardware_store_es.html
@@ -123,6 +123,8 @@
 								<img src="images/encoder-chronojump-sized.png" alt="Linear encoder">
 								</td><td width="100%">
 								En breve a la venta.
+								<br><br><a href="http://chronojump.org/encoder-chronojump-project.png">Consultar evolución del desarrollo.</a>
+								<br><br><a href="http://foro.chronojump.org/showthread.php?tid=109">Discutir en el foro.</a>
 								</td></tr>
 								<tr><td valign="bottom">
 							</td>
