Website added chronopic3-to-encoder

--- a/web/documents.html
+++ b/web/documents.html
@@ -162,6 +162,7 @@
 																		<br>&nbsp;&nbsp;&nbsp;Steel rods</li>
 																		<li>Construction of a push button</li>
 																		<li>Chronopic build</li>
+																		<li>Adapting Chronopic 3 to encoder</li>
 																		<li>Weight bar velocity using Chronojump (poster)</li>
 																		<li>Weight bar velocity using Chronojump (article)</li>
 														</ul>
@@ -176,6 +177,7 @@
 															<li id="lang"><a href="construction_contact_platform.html">en</a>, <a href="construction_contact_platform_es.html">es</a></li>
 															<li id="lang"><a href="construction_push_button.html">en</a>, <a href="construction_push_button_es.html">es</a></li>
 															<li id="lang"><a href="chronopic_build.html">en</a>, <a href="chronopic_build_es.html">es</a></li>
+															<li id="lang"><a href="converting-chronopic3-to-encoder.html">en</a></li>
 															<li id="lang"><a href="posters.html#06-08">en</a></li>
 															<li id="lang"><a href="http://www.efdeportes.com/efd141/nuevo-dispositivo-para-medir-la-velocidad.htm">es</a></li>
 											</ul>
