--- a/web/documents_es.html
+++ b/web/documents_es.html
@@ -162,6 +162,7 @@
 																		<br>&nbsp;&nbsp;&nbsp;Varillas de acero</li>
 																		<li>Construcción de pulsador</li>
 																		<li>Construcción de Chronopic</li>
+																		<li>Adaptar Chronopic 3 al encoder</li>
 																		<li>Velocidad de barra usando Chronojump (póster)</li>
 																		<li>Velocidad de barra usando Chronojump (artículo)</li>
 														</ul>
@@ -176,6 +177,7 @@
 															<li id="lang"><a href="construction_contact_platform.html">en</a>, <a href="construction_contact_platform_es.html">es</a></li>
 															<li id="lang"><a href="construction_push_button.html">en</a>, <a href="construction_push_button_es.html">es</a></li>
 															<li id="lang"><a href="chronopic_build.html">en</a>, <a href="chronopic_build_es.html">es</a></li>
+															<li id="lang"><a href="converting-chronopic3-to-encoder.html">en</a></li>
 															<li id="lang"><a href="posters.html#06-08">en</a></li>
 															<li id="lang"><a href="http://www.efdeportes.com/efd141/nuevo-dispositivo-para-medir-la-velocidad.htm">es</a></li>
 											</ul>
