--- a/web/converting-chronopic3-to-encoder.html
+++ b/web/converting-chronopic3-to-encoder.html
@@ -39,7 +39,7 @@
 			</table>
 		</center>
 	</td>
-	<td valign="bottom"><font size="2"><a href="construction_push_button_es.html">Español</a></font></td>
+	<td valign="bottom">&nbsp;</td>
 				</tr>
 				<tr height="1px"><td style="padding:0px 0px 0px 0px" colspan="2" bgcolor="#6c77ab" height="1px"></td></tr>
 </table>
